--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sec-cik-mapper = "^2.1.0"
 scipy = "<1.14.0"
 numba = "^0.60.0"
 pybacktestchain = "^0.2.1"
+matplotlib = "^3.10.0"
 
 
 [tool.poetry.group.dev.dependencies]
